Add special test-compile execution to enable integration testing on AppEngine EAR projects.